--- a/Contactus.html
+++ b/Contactus.html
@@ -7,5 +7,10 @@
 </head>
   <body>
     <img src="" alt="Logo contact us2">
+        <br>
+            <p> Contact us </p>
+                <br>
+                    06-71245678
+                
   </body>
 </html>
