--- a/Contactus.html
+++ b/Contactus.html
@@ -11,6 +11,8 @@
             <p> Contact us </p>
                 <br>
                     <p> 06-71245678 </p>
+                    <br> 
+                        <p> dickiesdonuts.gmail.com </p>
                 
   </body>
 </html>
