--- a/Contactus.html
+++ b/Contactus.html
@@ -6,9 +6,9 @@
   </title>
 </head>
   <body>
-    <img src="" alt="Logo contact us2">
+    <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="100px" height="100px">
         <br>
-            <p> Contact us </p>
+            <h1> Contact us </h1>
                 <br>
                     <p> 06-71245678 </p>
                     <br> 
