--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="Styles.css">
   </head>
   <body>
-    <ul>
+    <ul class="sticky">
       <li>
         
       </li>
