--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,8 @@
   <body>
     <ul class="sticky">
       <li>
-        
+        <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
-
     </ul>
   </body>
 </html>
