--- a/Contactus.html
+++ b/Contactus.html
@@ -6,9 +6,10 @@
   </title>
 </head>
   <body>
-    <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="100px" height="100px">
-        <br>
-            <h1> Contact us </h1>
+<header> Contact Us </header> 
+<br>
+<nav> Official contact information from Dickies Donuts </nav>
+   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="100px" height="100px">
                 <br>
                     <p> 06-71245678 </p>
                     <br> 
