--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="Styles.css">
   </head>
   <body>
+    <img src="P-105.jpg" style=" height: 100%; width: 100%;">
     <ul class="sticky">
       <li>
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
