navbar toegevoegd aan alle pagina's

--- a/Contactus.html
+++ b/Contactus.html
@@ -6,6 +6,11 @@
   </title>
 </head>
   <body>
+    <ul class="sticky">
+      <li>
+        <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
+      </li>
+    </ul>
 <header> Contact Us </header> 
 <br>
 <nav> Official contact information from Dickies Donuts </nav>
