--- a/Shop.html
+++ b/Shop.html
@@ -1,1 +1,10 @@
 
+<html>
+<body>
+    <ul class="sticky">
+        <li>
+          <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
+        </li>
+      </ul>
+</body>
+</html>
