--- a/Contactus.html
+++ b/Contactus.html
@@ -2,7 +2,7 @@
 <head>
   <title>
     Contact us 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles.css">
   </title>
 </head>
   <body>
