--- a/Contactus.html
+++ b/Contactus.html
@@ -1,8 +1,8 @@
 <html> 
 <head>
+  <link rel="stylesheet" href="Styles.css">
   <title>
-    Contact us 
-    <link rel="stylesheet" href="Styles.css">
+     Contact Us
   </title>
 </head>
   <body>
