--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,14 @@
   <head>
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body style="background-color: aqua;">
-    
+  <body>
     <ul class="sticky">
       <li>
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
+
+    <img scr="">
     <br>
     <br>
     <br>
