--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,7 @@
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
-
-    <img scr="">
+    <img src="donutbackground3.0.jpg">
     <br>
     <br>
     <br>
