--- a/Contactus.html
+++ b/Contactus.html
@@ -4,6 +4,13 @@
   <title>
      Contact Us
   </title>
+  <style> 
+  div {
+    padding: 8%;
+    margin: 3%;
+    background-color: aqua;
+  }
+  </style>
 </head>
   <body>
     <ul class="sticky">
@@ -11,13 +18,15 @@
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
-<header> Contact Us </header> 
+    <div>
+ <h1 class="header">  Contact Us </h1> 
 <nav> Official contact information from Dickies Donuts </nav>
+</div>
 <br>
-   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="100px" height="100px">
+   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="150px" height="150px">
                 <br>
                     <p> 06-71245678 </p>
-                    
+
                         <p> dickiesdonuts.gmail.com </p>
                 
   </body>
