--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,19 @@
   <head>
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body>
+  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 67px; background-repeat: no-repeat; ">
     <ul class="sticky">
       <li>
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
-    <img src="donutbackground3.0.jpg">
+    
+    
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum numquam natus doloribus impedit dolor incidunt hic, aspernatur rem inventore doloremque vero sunt consequuntur vitae expedita nostrum veniam, modi ad sapiente.
+      </p>
+    </div>
     <br>
     <br>
     <br>
