Er zijn paar dingen anders

--- a/Contactus.html
+++ b/Contactus.html
@@ -6,7 +6,7 @@
   </title>
   <style> 
   div {
-    padding: 8%;
+    padding: 5%;
     margin: 3%;
     background-color: aqua;
   }
@@ -23,11 +23,13 @@
 <nav> Official contact information from Dickies Donuts </nav>
 </div>
 <br>
-   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="150px" height="150px">
+   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="70%" style="justify-content: space-between;"> 
+   <img src=""
                 <br>
-                    <p> 06-71245678 </p>
-
-                        <p> dickiesdonuts.gmail.com </p>
-                
+              
+                <class="flex-container">
+                  <p> 06-71245678 </p>
+                  <p> dickiesdonuts.gmail.com </p>
+                </class>  
   </body>
 </html>
