--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     </ul>
     
     
-    <div>
+    <div class="HomepageText">
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum numquam natus doloribus impedit dolor incidunt hic, aspernatur rem inventore doloremque vero sunt consequuntur vitae expedita nostrum veniam, modi ad sapiente.
       </p>
