--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
   </head>
   <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 67px; background-repeat: no-repeat; ">
     <ul class="sticky">
-      <li>
+      <img src="Dickies logo.jpg" class="Logo">
+      <li style="text-align: right;">
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
