--- a/Contactus.html
+++ b/Contactus.html
@@ -4,13 +4,6 @@
   <title>
      Contact Us
   </title>
-  <style> 
-  div {
-    padding: 5%;
-    margin: 3%;
-    background-color: aqua;
-  }
-  </style>
 </head>
   <body>
     <ul class="sticky">
@@ -18,18 +11,17 @@
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
-    <div>
+    <div class="Contactusmain">
  <h1 class="header">  Contact Us </h1> 
 <nav> Official contact information from Dickies Donuts </nav>
-</div>
+</div class="Contactusmain">
 <br>
-   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="70%" style="justify-content: space-between;"> 
-   <img src=""
+<div class="contactlogo">
+  <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="20%" style="justify-content: space-between;"> 
+   <img src="Google maps logo Dickies.png" alt="google maps" width="20%" style="justify-content: space-between;">
+   </div class="contactlogo">
                 <br>
-              
-                <class="flex-container">
                   <p> 06-71245678 </p>
                   <p> dickiesdonuts.gmail.com </p>
-                </class>  
   </body>
 </html>
