--- a/Contactus.html
+++ b/Contactus.html
@@ -17,11 +17,17 @@
 </div class="Contactusmain">
 <br>
 <div class="contactlogo">
-  <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="20%" style="justify-content: space-between;"> 
-   <img src="Google maps logo Dickies.png" alt="google maps" width="20%" style="justify-content: space-between;">
+  <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="30%" height="30%" style="justify-content: space-between; display: flex;"> 
+   <img src="Google maps logo Dickies.png" alt="google maps" width="22%" height="22%" style="justify-content: space-between;display: flex;">
    </div class="contactlogo">
                 <br>
-                  <p> 06-71245678 </p>
-                  <p> dickiesdonuts.gmail.com </p>
+                <div class="tekstcontactus">
+                  <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
+                </div class="tekstcontactus">
+                <br>
+                <br>
+                <div class="tekstcontactus2">
+                 <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
+                </div class="tekstcontactus2">
   </body>
 </html>
