--- a/Contactus.html
+++ b/Contactus.html
@@ -11,10 +11,15 @@
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
-    <div class="Contactusmain">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="Contactusmain1">
  <h1 class="header">  Contact Us </h1> 
-<nav> Official contact information from Dickies Donuts </nav>
-</div class="Contactusmain">
+  <nav> Official contact information from Dickies Donuts </nav>
+</div class="Contactusmain1">
 <br>
 <div class="contactlogo">
   <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="30%" height="30%" style="justify-content: space-between; display: flex;"> 
@@ -24,8 +29,6 @@
                 <div class="tekstcontactus">
                   <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
                 </div class="tekstcontactus">
-                <br>
-                <br>
                 <div class="tekstcontactus2">
                  <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
                 </div class="tekstcontactus2">
