--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 94px; background-repeat: no-repeat; ">
+  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 107px; background-repeat: no-repeat; ">
     <ul class="sticky">
       <li>
       <img src="Dickies logo.jpg" class="Logo">
@@ -12,7 +12,7 @@
       </li>
     </ul>
     <div class="HomepageText">
-      <p>
+      <p class="HomepageText2">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum numquam natus doloribus impedit dolor incidunt hic, aspernatur rem inventore doloremque vero sunt consequuntur vitae expedita nostrum veniam, modi ad sapiente.
       </p>
     </div>
