--- a/Contactus.html
+++ b/Contactus.html
@@ -8,6 +8,9 @@
   <body>
     <ul class="sticky">
       <li>
+      <img src="Dickies logo.jpg" class="Logo">
+    </li>
+      <li style="text-align: right;">
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
