--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
       <p class="HomepageText2">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum numquam natus doloribus impedit dolor incidunt hic, aspernatur rem inventore doloremque vero sunt consequuntur vitae expedita nostrum veniam, modi ad sapiente.
       </p>
+      <br>
+      <a href="Shop.html"> <img   id="Shopnow" src="shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
     </div>
     <br>
     <br>
