--- a/Shop.html
+++ b/Shop.html
@@ -5,9 +5,12 @@
     </head>
 <body>
     <ul class="sticky">
-        <li>
-          <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
-        </li>
-      </ul>
+      <li>
+      <img src="Dickies logo.jpg" class="Logo">
+    </li>
+      <li style="text-align: right;">
+        <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
+      </li>
+    </ul>
 </body>
 </html>
