--- a/Contactus.html
+++ b/Contactus.html
@@ -17,8 +17,7 @@
     <br>
     <br>
     <div class="Contactusmain1">
- <h1 class="header">  Contact Us </h1> 
-  <nav> Official contact information from Dickies Donuts </nav>
+ <h1 class="header">  Contact Us </h1>
 </div class="Contactusmain1">
 <br>
 <div class="contactlogo">
@@ -26,11 +25,21 @@
    <img src="Google maps logo Dickies.png" alt="google maps" width="22%" height="22%" style="justify-content: space-between;display: flex;">
    </div class="contactlogo">
                 <br>
-                <div class="tekstcontactus">
+                <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
-                </div class="tekstcontactus">
-                <div class="tekstcontactus2">
-                 <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
-                </div class="tekstcontactus2">
+                </div class="Contactusmain1">
+                <br>
+                <div class="Contactusmain1">
+                <p> <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
+                </div class="Contactusmain1">
+                <br>
+                <div class="Contactusmain1"> 
+                  <p> <h1 style="justify-content: space-between;"> Location: Eindhoven, Keizersgracht 19 </h1> </p>
+                </div class="Contactusmain1">
+                <br>
+                <div class="Contactusmain1"> 
+                  <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
+                </div class="Contactusmain1">
+
   </body>
 </html>
