--- a/Contactus.html
+++ b/Contactus.html
@@ -24,22 +24,18 @@
 </div class="Contactusmain1">
 <br>
 <div class="contactlogo">
-  <img src="Whatsapp logo contact us.png" alt="Logo contact us2" width="30%" height="30%" style="justify-content: space-between; display: flex;"> 
-   <img src="Google maps logo Dickies.png" alt="google maps" width="22%" height="22%" style="justify-content: space-between;display: flex;">
+  <img src="Whatsapp logo png.webp" alt="Logo contact us2" width="32%" height="32%" style="justify-content: space-between; display: flex;"> 
+   <img src="Google maps logo Dickies.png" alt="google maps" width="20%" height="20%" style="justify-content: space-between;display: flex;">
    </div class="contactlogo">
-                <br>
                 <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
                 </div class="Contactusmain1">
-                <br>
                 <div class="Contactusmain1">
                 <p> <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
                 </div class="Contactusmain1">
-                <br>
                 <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Location: Eindhoven, Keizersgracht 19 </h1> </p>
                 </div class="Contactusmain1">
-                <br>
                 <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
                 </div class="Contactusmain1">
