--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 107px; background-repeat: no-repeat; ">
     <ul class="sticky">
       <li>
-      <img src="Dickies logo.jpg" class="Logo">
+      <img src="Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
