--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 107px; background-repeat: no-repeat; ">
+  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
     <ul class="sticky">
       <li>
       <img src="Dickies_logo.png" class="Logo">
@@ -18,6 +18,14 @@
       <br>
       <a href="Shop.html"> <img   id="Shopnow" src="shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
     </div>
+    <div id="bestsell">
+      <p>
+        Best Sellers
+      </p>
+    </div>
+    <div class="Product"> </div>
+    <div class="Product"> </div>
+    <div class="Product"> </div>
     <br>
     <br>
     <br>
