--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     </ul>
     <div class="HomepageText">
       <p class="HomepageText2">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum numquam natus doloribus impedit dolor incidunt hic, aspernatur rem inventore doloremque vero sunt consequuntur vitae expedita nostrum veniam, modi ad sapiente.
+       Are you hungry and want some top-tier donuts? Then we got you! Buy 6 donuts and get one free. All donuts are freshly made with our great bakers!
       </p>
       <br>
       <a href="Shop.html"> <img   id="Shopnow" src="shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
