--- a/Shop.html
+++ b/Shop.html
@@ -12,6 +12,16 @@
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
       </li>
     </ul>
+<div class="Contactusmain1"> 
+    <h1 class="header"> Shop Now </h1>
+    </div class="Contactusmain1">
+    <br>
+    <br>
+    <br>
+    <br>
+
+    
+
 
 </body>
 </html>
