--- a/Index.html
+++ b/Index.html
@@ -23,9 +23,30 @@
         Best Sellers
       </p>
     </div>
-    <div class="Product"> </div>
-    <div class="Product"> </div>
-    <div class="Product"> </div>
+    <br>
+    <div class="Product">
+      <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
+      <div>
+        <p> Pink Fairy Donut</p> 
+
+      </div>
+      </div>
+      <div class="Product">
+        <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
+        <div>
+          <p> Pink Fairy Donut</p> 
+  
+        </div>
+        </div>
+        <div class="Product">
+          <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
+          <div>
+            <p> Pink Fairy Donut</p> 
+    
+          </div>
+          </div>
+    
+
     <br>
     <br>
     <br>
