--- a/Index.html
+++ b/Index.html
@@ -23,28 +23,18 @@
         Best Sellers
       </p>
     </div>
-    <br>
     <div class="Product">
-      <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
-      <div>
-        <p> Pink Fairy Donut</p> 
-
-      </div>
-      </div>
-      <div class="Product">
-        <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
-        <div>
-          <p> Pink Fairy Donut</p> 
-  
-        </div>
-        </div>
-        <div class="Product">
-          <img class="productimg" src="Pink fairy Donut.jpg" alt="Donut">
-          <div>
-            <p> Pink Fairy Donut</p> 
-    
-          </div>
-          </div>
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
     
 
     <br>
