--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="Koningsdag donut.png" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
