--- a/Index.html
+++ b/Index.html
@@ -28,11 +28,11 @@
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Koningsdag donut.png" alt="donutpic">
+      <img src="Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     
