--- a/Index.html
+++ b/Index.html
@@ -25,15 +25,17 @@
     </div>
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <p> De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles. </p>
     </div>
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <p> </p>
     </div>
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <p>  </p>
+      <br>
+      <h1> €4.00 </h1>
     </div>
     
 
