--- a/Shop.html
+++ b/Shop.html
@@ -6,7 +6,7 @@
 <body>
     <ul class="sticky">
       <li>
-      <img src="Dickies logo.jpg" class="Logo">
+      <img src="Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
         <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
@@ -15,12 +15,78 @@
 <div class="Contactusmain1"> 
     <h1 class="header"> Shop Now </h1>
     </div class="Contactusmain1">
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="donutposition"> 
- 
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div> 
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Brownie Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
+    <div class="Product">
+      <img src="Confetti Donut.jpg" alt="donutpic">
+      <p> donut</p>
+    </div>
     
 
 
