--- a/test.html
+++ b/test.html
@@ -4,9 +4,10 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    <div class="Product">
-        djgljsdg
-    </div>
+    
+    <footer class="footer">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cumque nobis facere molestiae nostrum ut quis iure iusto vero harum itaque sed corporis culpa suscipit labore possimus, deserunt voluptates cupiditate?
+    </footer>
     
 </body>
 </html>
