--- a/Index.html
+++ b/Index.html
@@ -27,18 +27,23 @@
       <img src="Pink fairy Donut.jpg" alt="donutpic">
       <p> De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles. </p>
     </div>
+
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> </p>
+      <p> De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles. </p>
     </div>
+
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
       <p>  </p>
       <br>
       <h1> €4.00 </h1>
+    </div>
+      <div class="Product">
       <img src="Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
+
     <div class="Product">
       <img src="Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
