--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,9 @@
     </div>
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles. </p>
+      <p> De Brownie donut is een smaakvolle chocola donut voor de chocola liefhebbers. De donut bevat chocopasta vulling en is getopt met chocola sprinkles. </p>
+      <br>
+      <h1> €4.00 </h1>
     </div>
 
     <div class="Product">
