--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
 
     <div class="Product">
       <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> </p>
+      <p> De Blauwe Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt</p>
       <br>
       <h1> €4.00 </h1>
     </div>
