--- a/test.html
+++ b/test.html
@@ -5,9 +5,31 @@
 </head>
 <body>
     
-    <footer class="footer">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cumque nobis facere molestiae nostrum ut quis iure iusto vero harum itaque sed corporis culpa suscipit labore possimus, deserunt voluptates cupiditate?
-    </footer>
+    <div class="footer">
+        Klantenservice
+Contact opnemen
+Bestellen & Leveren
+Betalen
+Retourneren
+Garantie & Reparatie
+Over bol
+De voordelen van bol
+Nieuws
+Werken bij bol
+Bol & duurzaamheid
+De bol app
+Bedrijfsgegevens
+Bollebozen
+Zakendoen met bol
+Zakelijk verkopen
+Zakelijk bestellen
+Zakelijke cadeaukaarten
+Adverteren
+Affiliate Marketing
+Wil je ons volgen?
+
+Meld je aan voor korting en inspiratie in je mailbox
+    </div>
     
 </body>
 </html>
