--- a/Contactus.html
+++ b/Contactus.html
@@ -1,6 +1,9 @@
 <html> 
 <head>
   <link rel="stylesheet" href="Styles.css">
+  <title> Contact Us</title>
+  <link rel="icon" href="Dickies icon.jpg" type="image">
+
   <title>
      Contact Us
   </title>
