--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="Styles.css">
+    <title> Home </title>
+    <link rel="icon" href="Dickies icon.jpg" type="image">
   </head>
   <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
     <ul class="sticky">
