--- a/Shop.html
+++ b/Shop.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="Styles.css">
+        <title>Shop </title>
+        <link rel="icon" href="Dickies icon.jpg" type="image">
+
     </head>
 <body>
     <ul class="sticky">
