--- a/Index.html
+++ b/Index.html
@@ -5,14 +5,18 @@
     <link rel="icon" href="Dickies icon.jpg" type="image">
   </head>
   <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
+    <!--Onderstaande ul in de navbar -->
     <ul class="sticky">
       <li>
       <img src="Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
-        <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
+        <a href="Contactus.html"> Contact Us</a> 
+        <a href="Shop.html"> Shop Now </a>
+        <a href="Index.html"> Home </a>
       </li>
     </ul>
+    <!-- Onderstaande Div is de homepage text en de shop now knop er onder-->
     <div class="HomepageText">
       <p class="HomepageText2">
        Are you hungry and want some top-tier donuts? Then we got you! Buy 6 donuts and get one free. All donuts are freshly made with our great bakers!
@@ -20,96 +24,41 @@
       <br>
       <a href="Shop.html"> <img   id="Shopnow" src="shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
     </div>
+<!-- Onderstaande Div is de Bestsellers text -->
     <div id="bestsell">
       <p>
         Best Sellers
       </p>
     </div>
+<!-- Onderstaande is de eerste donut-->
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> De Brownie donut is een smaakvolle chocola donut voor de chocola liefhebbers. De donut bevat chocopasta vulling en is getopt met chocola sprinkles. </p>
+      <img src="Pink fairy Donut.jpg" alt="donutimg">
+      <p class="donuttext">Pink Fairy Donut</p>
       <br>
-      <h1> €4.00 </h1>
-    </div>
-
-    <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles. </p>
+      <p>De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles.</p>
       <br>
-      <h1> €4.00 </h1>
+      <h1> €3.99 </h1>
     </div>
-
-    <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
-      <p> De Blauwe Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt</p>
-      <br>
-      <h1> €4.00 </h1>
-    </div>
+<!-- Onderstaande is de tweede donut-->
       <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <img src="Brownie Donut.jpg" alt="donutimg">
+      <p class="donuttext"> Brownie Donut </p>
+      <br>
+      <p>De Brownie donut is een smaakvolle chocola donut voor de chocola liefhebbers. De donut bevat chocopasta vulling en is getopt met chocola sprinkles. </p>
+      <br>
+      <h1> €3.99  </h1>
     </div>
-
+<!-- Onderstaande is de derde donut-->
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <img src="Confetti Donut.jpg" alt="donutimg">
+      <p class="donuttext"> Confetti donut</p>
+      <br>
+      <p> De Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt confetti sprinkles</p>
+      <br>
+      <h1> €3.99  </h1>
     </div>
     
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
