--- a/Contactus.html
+++ b/Contactus.html
@@ -14,7 +14,9 @@
       <img src="Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
-        <a href="Index.html"> Home </a> <a href="Shop.html"> Shop Now </a> <a href="Contactus.html"> Contact Us</a>
+        <a href="Contactus.html"> Contact Us</a> 
+        <a href="Shop.html"> Shop Now </a>
+        <a href="Index.html"> Home </a>
       </li>
     </ul>
     <div class="Contactusmain1">
