--- a/test.html
+++ b/test.html
@@ -6,30 +6,9 @@
 <body>
     
     <div class="footer">
-        Klantenservice
-Contact opnemen
-Bestellen & Leveren
-Betalen
-Retourneren
-Garantie & Reparatie
-Over bol
-De voordelen van bol
-Nieuws
-Werken bij bol
-Bol & duurzaamheid
-De bol app
-Bedrijfsgegevens
-Bollebozen
-Zakendoen met bol
-Zakelijk verkopen
-Zakelijk bestellen
-Zakelijke cadeaukaarten
-Adverteren
-Affiliate Marketing
-Wil je ons volgen?
-
-Meld je aan voor korting en inspiratie in je mailbox
-    </div>
+        © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
+        <br>
+        Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   </div>
     
 </body>
 </html>
