--- a/Contactus.html
+++ b/Contactus.html
@@ -33,6 +33,10 @@
                   <p> <h1 style="justify-content: space-between;"> Location: Eindhoven, Keizersgracht 19 </h1> </p>
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
                 </div class="Contactusmain1">
-
+                <div class="footer">
+                  © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
+                  <br>
+                  Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
+              </div>
   </body>
 </html>
