--- a/Index.html
+++ b/Index.html
@@ -77,5 +77,10 @@
     <br>
     <br>
     <br>
+    <div class="footer">
+      © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
+      <br>
+      Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
+  </div>
   </body>
 </html>
