--- a/Shop.html
+++ b/Shop.html
@@ -94,6 +94,10 @@
     </div>
     
 
-
+    <div class="footer">
+      © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
+      <br>
+      Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
+  </div>
 </body>
 </html>
