--- a/test.html
+++ b/test.html
@@ -8,7 +8,8 @@
     <div class="footer">
         © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
         <br>
-        Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   </div>
+        Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
+    </div>
     
 </body>
 </html>
