--- a/Contactus.html
+++ b/Contactus.html
@@ -3,12 +3,12 @@
   <link rel="stylesheet" href="Styles.css">
   <title> Contact Us</title>
   <link rel="icon" href="Dickies icon.jpg" type="image">
-
   <title>
      Contact Us
   </title>
 </head>
   <body>
+        <!--Onderstaande ul in de navbar -->
     <ul class="sticky">
       <li>
       <img src="Dickies_logo.png" class="Logo">
@@ -19,14 +19,17 @@
         <a href="Index.html"> Home </a>
       </li>
     </ul>
+    <!-- Onderstaande code is voor de kop van de pagina -->
     <div class="Contactusmain1">
  <h1 class="header">  Contact Us </h1>
 </div class="Contactusmain1">
 <br>
+<!-- Onderstaande tekst is voor de twee afbeeldingen op de pagina. De div zorgt ervoor dat ze in een box zitten!-->
 <div class="contactlogo">
   <img src="Whatsapp logo png.webp" alt="Logo contact us2" width="32%" height="32%" style="justify-content: space-between; display: flex;"> 
    <img src="Google maps logo Dickies.png" alt="google maps" width="20%" height="20%" style="justify-content: space-between;display: flex;">
    </div class="contactlogo">
+   <!-- Alle informatie staat hier onder. De div zorgt ervoor dat het in een box zit.-->
                 <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
                 <p> <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
@@ -34,6 +37,7 @@
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
                 </div class="Contactusmain1">
                 <div class="footer">
+                  <!-- Dit hieronder zorgt ervoor dat er in footer zit in de pagina. De div class zorgt ervoor dat er een zwarte achtergrond is en dat de tekst wit is! -->
                   © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
                   <br>
                   Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
