--- a/Index.html
+++ b/Index.html
@@ -53,9 +53,10 @@
       <img src="Confetti Donut.jpg" alt="donutimg">
       <p class="donuttext"> Confetti donut</p>
       <br>
-      <p> De Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt confetti sprinkles</p>
+      <p> De Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt confetti sprinkles en bevat een bosbes vulling. Er is nu een fantastische deal één donut voor €2.99!</p>
       <br>
-      <h1> €3.99  </h1>
+      <h1> <s class="deal"> €3.99 </s>
+        €2.99 </h1>
     </div>
     
 
