--- a/Shop.html
+++ b/Shop.html
@@ -33,7 +33,7 @@
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="Gesuikerde donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
