--- a/Shop.html
+++ b/Shop.html
@@ -37,15 +37,15 @@
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="Cookie monster donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="Simpele chocola donut.avif" alt="donutpic">
       <p> donut</p>
     </div> 
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="Witte strepen zwarte donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
