--- a/Contactus.html
+++ b/Contactus.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="Styles.css">
   <title> Contact Us</title>
-  <link rel="icon" href="Dickies icon.jpg" type="image">
+  <link rel="icon" href="/images/Dickies icon.jpg" type="image">
   <title>
      Contact Us
   </title>
@@ -11,7 +11,7 @@
         <!--Onderstaande ul in de navbar -->
     <ul class="sticky">
       <li>
-      <img src="Dickies_logo.png" class="Logo">
+      <img src="/images/Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
         <a href="Contactus.html"> Contact Us</a> 
@@ -26,8 +26,8 @@
 <br>
 <!-- Onderstaande tekst is voor de twee afbeeldingen op de pagina. De div zorgt ervoor dat ze in een box zitten!-->
 <div class="contactlogo">
-  <img src="Whatsapp logo png.webp" alt="Logo contact us2" width="32%" height="32%" style="justify-content: space-between; display: flex;"> 
-   <img src="Google maps logo Dickies.png" alt="google maps" width="20%" height="20%" style="justify-content: space-between;display: flex;">
+  <img src="/images/Whatsapp logo png.webp" alt="Logo contact us2" width="32%" height="32%" style="justify-content: space-between; display: flex;"> 
+   <img src="/images/Google maps logo Dickies.png" alt="google maps" width="20%" height="20%" style="justify-content: space-between;display: flex;">
    </div class="contactlogo">
    <!-- Alle informatie staat hier onder. De div zorgt ervoor dat het in een box zit.-->
                 <div class="Contactusmain1"> 
