--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,13 @@
   <head>
     <link rel="stylesheet" href="Styles.css">
     <title> Home </title>
-    <link rel="icon" href="Dickies icon.jpg" type="image">
+    <link rel="icon" href="/images/Dickies icon.jpg" type="image">
   </head>
-  <body style="background-image: url(donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
+  <body style="background-image: url(/images/donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
     <!--Onderstaande ul in de navbar -->
     <ul class="sticky">
       <li>
-      <img src="Dickies_logo.png" class="Logo">
+      <img src="/images/Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
         <a href="Contactus.html"> Contact Us</a> 
@@ -22,7 +22,7 @@
        Are you hungry and want some top-tier donuts? Then we got you! Buy 6 donuts and get one free. All donuts are freshly made with our great bakers!
       </p>
       <br>
-      <a href="Shop.html"> <img   id="Shopnow" src="shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
+      <a href="Shop.html"> <img   id="Shopnow" src="/images/shop-now-button-black-background-27b6ebqxi85cmbud.png" alt="Shop now"> </a>
     </div>
 <!-- Onderstaande Div is de Bestsellers text -->
     <div id="bestsell">
@@ -32,7 +32,7 @@
     </div>
 <!-- Onderstaande is de eerste donut-->
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutimg">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
       <p class="donuttext">Pink Fairy Donut</p>
       <br>
       <p>De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles.</p>
@@ -41,7 +41,7 @@
     </div>
 <!-- Onderstaande is de tweede donut-->
       <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutimg">
+      <img src="/images/Brownie Donut.jpg" alt="donutimg">
       <p class="donuttext"> Brownie Donut </p>
       <br>
       <p>De Brownie donut is een smaakvolle chocola donut voor de chocola liefhebbers. De donut bevat chocopasta vulling en is getopt met chocola sprinkles. </p>
@@ -50,7 +50,7 @@
     </div>
 <!-- Onderstaande is de derde donut-->
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutimg">
+      <img src="/images/Confetti Donut.jpg" alt="donutimg">
       <p class="donuttext"> Confetti donut</p>
       <br>
       <p> De Confetti donut is een kleurvolle donut voor de partygangers. De donut is getopt confetti sprinkles en bevat een bosbes vulling. Er is nu een fantastische deal één donut voor €2.99!</p>
