--- a/Shop.html
+++ b/Shop.html
@@ -3,13 +3,13 @@
     <head>
         <link rel="stylesheet" href="Styles.css">
         <title>Shop </title>
-        <link rel="icon" href="Dickies icon.jpg" type="image">
+        <link rel="icon" href="/images/Dickies icon.jpg" type="image">
 
     </head>
 <body>
     <ul class="sticky">
       <li>
-      <img src="Dickies_logo.png" class="Logo">
+      <img src="/images/Dickies_logo.png" class="Logo">
     </li>
       <li style="text-align: right;">
         <a href="Contactus.html"> Contact Us</a> 
@@ -21,75 +21,75 @@
     <h1 class="header"> Shop Now </h1>
     </div class="Contactusmain1">
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Gesuikerde donut.jpg" alt="donutpic">
+      <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div> 
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Pink fairy Donut.jpg" alt="donutpic">
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Brownie Donut.jpg" alt="donutpic">
+      <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
-      <img src="Confetti Donut.jpg" alt="donutpic">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     
