--- a/Shop.html
+++ b/Shop.html
@@ -22,19 +22,27 @@
     </div class="Contactusmain1">
     <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
+      <p> The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
+      <br>
+    <h1> €2.99 </h1>
+  </div>
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <p> The Brownie donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
+      <br>
+      <h1> €2.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <p> Sugared Donut is a sweet and plain donut for the people who want something simple. It is topped with sugar and contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>
+    <div class="Product">
+      <img src="/images/Confetti Donut.jpg" alt="donutpic">
+      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and contains a blueberry filling. Now on sale! </p>
+      <br>
+      <h1> <s class="deal"> €2.99 </s> €2.00 </h1>
     </div>
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
