--- a/Shop.html
+++ b/Shop.html
@@ -45,7 +45,7 @@
       <h1> <s class="deal"> €2.99 </s> €2.00 </h1>
     </div>
     <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
+      <img src="/iamges/Cookie monster donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
     <div class="Product">
