--- a/Index.html
+++ b/Index.html
@@ -31,14 +31,16 @@
       </p>
     </div>
 <!-- Onderstaande is de eerste donut-->
-    <div class="Product">
+<a class="ProductpageA"   href="Productpage.html">    
+  <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
-      <p class="donuttext">Pink Fairy Donut</p>
-      <br>
-      <p>De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles.</p>
-      <br>
-      <h1> €3.99 </h1>
+        <p class="donuttext">Pink Fairy Donut</p>
+        <br>
+        <p>De Pink Fairy donut is een lekkere donut voor alle aardbei liefhebbers. De donut bevat aardbei vulling en is getopt met regenboog sprinkles.</p>
+        <br>
+        <h1> €3.99 </h1>
     </div>
+  </a>
 <!-- Onderstaande is de tweede donut-->
       <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutimg">
