--- a/Shop.html
+++ b/Shop.html
@@ -22,19 +22,19 @@
     </div class="Contactusmain1">
     <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
+      <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
       <br>
     <h1> €2.99 </h1>
   </div>
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> The Brownie donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
+      <p> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
       <br>
       <h1> €2.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
-      <p> Sugared Donut is a sweet and plain donut for the people who want something simple. It is topped with sugar and contains no filling. </p>
+      <p> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>
@@ -46,11 +46,13 @@
     </div>
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
-      <p> donut</p>
+      <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
     </div>
     <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
     </div> 
     <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
