--- a/Productpage.html
+++ b/Productpage.html
@@ -18,12 +18,12 @@
     </ul>
 
     <div class="Productpagedonuttext">
-        <p>Pink fairy donut </p>
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
+        <p>Pink Fairy Donut </p>
+        <p style="font-size: 25px; font-weight: 100;"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
         <br>
-        <p style="color: purple;" > €3.00 </p>
-
+        <p style> €3.00 </p>
     </div>
+    
     <div class="Productpagedonut">
         <img src="/images/Pink fairy Donut.jpg" alt="donutimg" style="border: black solid; width: 40%;">
     </div>
